--- a/PortalAlumni/app/templates/app/user_event_form.html
+++ b/PortalAlumni/app/templates/app/user_event_form.html
@@ -1,11 +1,12 @@
 
 {%extends 'app/base.html'%}
 {%block body_block%}
+    <h1>EVENT FORM of User: <b><i>{{user.first_name}}</i></b></h1><hr>
     <form method="post" enctype="multipart/form-data">
         {%csrf_token%}
-        <p>Title: {{form.title}}</p>
-        <p>Text: {{form.text}}</p>
+        <p>{{form.title}}</p>
+        <p>{{form.text}}</p>
         <p>Poster of Event: {{form.photo}}</p>
-        <input type="submit" name="" value="submit">
+        <input type="submit" class="btn btn-primary"name="" value="submit">
     </form>
 {%endblock%}
