--- a/PortalAlumni/app/templates/registration/login.html
+++ b/PortalAlumni/app/templates/registration/login.html
@@ -2,14 +2,15 @@
 {%extends 'app/base.html'%}
 {%block body_block%}
     <h2>Please LogIn:</h2>
-    <h3>(Must be SuperUser, please check with the site admin)</h3>
+
     {%if forms.errors%}
         <p>Your username or password is incorrect! please try again.</p>
 
     {%endif%}
-    <form action="{%url 'login'%}" method="POST">
+    <form action="{%url 'app:login'%}" method="POST" >
         {%csrf_token%}
-        {{form.as_p}}
+        <p> {{user_form.username}}</p>
+        <p>{{user_form.password}}</p>
         <input type="submit" class="btn btn-primary" value="Login">
         <input type="hidden" name="next" value="{{next}}">
 
